# proto_benchmarks

./: .travis.yml  Cargo.toml  README.md  build.rs
.criterion/capnp_basic_read/base/: estimates.json  sample.json  tukey.json
.criterion/capnp_basic_read/change/: estimates.json
.criterion/capnp_basic_read/new/: estimates.json  sample.json  tukey.json
.criterion/capnp_basic_write/base/: estimates.json  sample.json  tukey.json
.criterion/capnp_basic_write/change/: estimates.json
.criterion/capnp_basic_write/new/: estimates.json  sample.json  tukey.json
.criterion/capnp_complex_read/base/: estimates.json  sample.json  tukey.json
.criterion/capnp_complex_read/change/: estimates.json
.criterion/capnp_complex_read/new/: estimates.json  sample.json  tukey.json
.criterion/capnp_complex_write/base/: estimates.json  sample.json  tukey.json
.criterion/capnp_complex_write/change/: estimates.json
.criterion/capnp_complex_write/new/: estimates.json  sample.json  tukey.json
.criterion/capnp_simple_read/new/: estimates.json  sample.json  tukey.json
.criterion/capnp_simple_write/base/: estimates.json  sample.json  tukey.json
benches/: basic_read.rs  basic_write.rs  capnp_basic_read_benchmark.rs  capnp_basic_write_benchmark.rs  capnp_complex_read_benchmark.rs  capnp_complex_write_benchmark.rs  capnp_simple_read_benchmark.rs  capnp_simple_write_benchmark.rs  complex_build.rs  complex_read.rs  complex_write.rs  protobuf_basic_read_benchmark.rs  protobuf_basic_write_benchmark.rs  protobuf_complex_read_benchmark.rs  protobuf_complex_write_benchmark.rs  protobuf_simple_read_benchmark.rs  protobuf_simple_write_benchmark.rs
protos/: bench.capnp  bench.fbs  bench.proto
src/: bench.rs  bench_capnp.rs  bench_generated.rs  bench_quick.rs  lib.rs
(+157 files in other folders)
