[package]
name = "proto_benchmarks"
version = "0.1.0"
authors = ["Chris MacNaughton <chris@centaurisolutions.nl>"]
build = "build.rs"
edition = "2018"

[dependencies]
protobuf = "*"
capnp = "*"
flatbuffers = "*"

[build-dependencies]
capnpc = "*"
protobuf-codegen-pure = "~2"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "basic_read"
harness = false

[[bench]]
name = "complex_read"
harness = false

[[bench]]
name = "basic_write"
harness = false

[[bench]]
name = "complex_write"
harness = false

[[bench]]
name = "complex_build"
harness = false